--- a/src/styles/base/index.css
+++ b/src/styles/base/index.css
@@ -83,6 +83,7 @@ ol {
 a {
   color: inherit;
   text-decoration: none;
+  font-family: var(--font-inter), Inter, sans-serif;
 }
 
 /* Image defaults */
